data/all_generated_tests/raw_wast_tests/block_EdgeCaseFailuresinbr_table_68.wast
;; 9. **Test with Full Stack Unwinding by `br_table`**:    - A `block` where `br_table` should unwind the entire operand stack before jumping.    - Examines if the operand stack is correctly unwound and values are correctly set according to the `br_table` target requirements.    - Edge Case: Errors in wizard_engine's `ctl_stack` function might result in incorrect stack state after branching.

(assert_invalid
  (module
    (func $test_full_stack_unwinding_br_table
      (block
        (i32.const 42) (i32.const 42) (i32.const 42)
        (br_table 0 0 0)
        (drop) (drop) (drop)
      )
    )
  )
  "type mismatch"
)